05 - Website plan section implemented with the pricing cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -395,7 +395,7 @@ h6 {
   font-size: 10px;
 }
 
-/* -------------------------------------------------------------------------- */
+/* ----------------------App Chat Section---------------------------------- */
 
 .app-chat-section {
   display: flex;
@@ -424,9 +424,15 @@ h6 {
   transition: all 0.1s ease-in-out;
   
 }
+.chat-users:hover img{
+  filter: blur(10px);
+  transform: scale(0.9);
+
+}
 .chat-users img:hover{
-  transform: scale(1.6);
+  transform: scale(1.1);
   box-shadow: 0 0 10px rgba(2, 241, 142, 0.7);
+  filter: blur(0);
   cursor: pointer;
 }
 .add-user {
@@ -729,11 +735,9 @@ width: auto;
 height: 65vh;
 width: 100%;
 margin: 0 50px;
+filter: drop-shadow(0px 0px 100px 10px #000);
+}
 
-}
-.about-image{
-  filter: drop-shadow(0px 0px 100px 10px #000);
-}
 .about-span{
   color: #2020ff;
   font-weight: 600;
@@ -744,4 +748,75 @@ margin: 0 50px;
   font-size: 30px;
   font-weight: 400;
   line-height: 1.3;
+}
+
+/* ========================Plan Section=================================== */
+.plan-section{
+  height: 800px;
+  background-color: #0c1014;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.plan-title{
+  text-align: center;
+  line-height: 1.5;
+}
+.plan-section p{
+  font-size: 20px;
+  font-weight: 400;
+}
+.card-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+}
+.card{
+  height: 450px;
+  width: 350px;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 20px 20px 5px #000;
+  transition: all 0.2s;
+}
+.card-1, .card-3{
+  background-color: #fcf9ff;
+  color: #0c1014;
+}
+.card-2{
+  background-color: #2020ff;
+  color: #fcf9ff;
+  z-index: 10;
+  margin: 0 -70%;
+}
+.card h3{
+font-weight: 600;
+}
+.card .card-plan{
+  text-align: center;
+  margin-top: 5%;
+  line-height: 2;
+}
+.card .card-plan button{
+  background-color: #e7e7e7;
+  height: 40px;
+  width: 150px;
+  margin-top: 15%;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.card .card-header{
+  line-height: 1.5;
+}
+.card-section:hover .card {
+  filter: blur(10px);
+  transform: scale(0.9);
+}
+.card-section .card:hover{
+  z-index: 20;
+  filter: blur(0);
+  transform: scale(1);
 }
