--- a/css/styles.css
+++ b/css/styles.css
@@ -5,36 +5,47 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html,
 body {
   font-weight: 300;
   font-size: 10px;
   color: #fcf9ff;
   font-family: "Raleway", sans-serif;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
+
 a {
   text-decoration: none;
   color: #fcf9ff;
 }
+
 li {
   list-style: none;
 }
+
 h2 {
   font-size: 60px;
   font-weight: 500;
 }
+
 h3 {
   font-size: 32px;
 }
+
 h4 {
   font-size: 24px;
 }
+
 h5 {
   font-size: 18px;
 }
+
 h6 {
   font-size: 14px;
 }
+
 /* ===================Hero section====================== */
 .hero-section {
   width: 100vw;
@@ -43,6 +54,7 @@ h6 {
   height: 1080px;
   background-color: #0c1014;
 }
+
 /* ===================navbar====================== */
 .navbar {
   height: 80px;
@@ -57,10 +69,12 @@ h6 {
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
 }
+
 .nav-logo {
   height: 35px;
   width: auto;
 }
+
 /* If the width property is set to a percentage and the height property is set to "auto", the image will be responsive and scale up and down: you could as well use max-height instead of height */
 .nav-links {
   display: flex;
@@ -69,16 +83,15 @@ h6 {
   flex: 0 0 60%;
   /* flex: flex-grow| flex-shrink| flex-basis */
 }
+
 .nav-links li a {
   font-size: 22px;
   font-weight: 400;
   /* A */
-  background-image: linear-gradient(
-    to right,
-    #0066ff 0%,
-    #00ffe0 50%,
-    #fcf9ff 50%
-  );
+  background-image: linear-gradient(to right,
+      #0066ff 0%,
+      #00ffe0 50%,
+      #fcf9ff 50%);
   /* To right, 04 colors with their opacities. The percentage is the opacity */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -92,6 +105,7 @@ h6 {
   transition: all 0.3s ease;
   /* transition property is always asigned to the parent. The default is set to ease. the "background-position" is just the name of the property you are applying to, the transition time and then the type. */
 }
+
 .nav-links li a:hover {
   background-position: 0% 100%;
 
@@ -108,21 +122,21 @@ h6 {
   justify-content: center;
   align-items: center;
   /* setting up for hover below */
-  background-image: linear-gradient(
-    to right,
-    #0066ff 0%,
-    #00ffe0 50%,
-    #0c1014 50%
-  );
+  background-image: linear-gradient(to right,
+      #0066ff 0%,
+      #00ffe0 50%,
+      #0c1014 50%);
   background-size: 200% 100%;
   background-position: 100%;
   transition: all 0.3s ease-out;
 }
+
 .btn:hover {
   background-position: 0 100%;
   border: none;
   font-weight: 600;
 }
+
 /* ===================Hero Title====================== */
 .hero-content {
   text-align: center;
@@ -132,16 +146,19 @@ h6 {
   position: relative;
   top: 15%;
 }
+
 .hero-content h1:first-of-type {
   background-image: linear-gradient(to right bottom, #f53c95, #0044ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 .hero-content h1:last-of-type {
   background-image: linear-gradient(to right bottom, #004bfa, #02f18e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 .hero-images {
   position: absolute;
   display: flex;
@@ -150,22 +167,26 @@ h6 {
   top: 15%;
   padding: 0 5px;
 }
+
 .hero-images img {
   width: 15vw;
   /* using the vw correlation above for the font size partially creates responsiveness and as such the size adjusts in relation to the view width */
   height: auto;
 }
+
 .hero-desc {
   text-align: center;
   width: 100%;
   position: relative;
   top: 25%;
 }
+
 .hero-desc p {
   font-size: 1.5vw;
   font-weight: 300;
   line-height: 1.7;
 }
+
 .download-btn {
   margin: 5% auto;
   position: relative;
@@ -187,14 +208,13 @@ h6 {
   width: 100vw;
   max-width: 100%;
   position: relative;
-  background-image: linear-gradient(
-    to right bottom,
-    #6f00ff 0%,
-    #1100ff 30%,
-    #ff004d 75%,
-    #ff3d00 100%
-  );
+  background-image: linear-gradient(to right bottom,
+      #6f00ff 0%,
+      #1100ff 30%,
+      #ff004d 75%,
+      #ff3d00 100%);
 }
+
 /* .app-section {
   height: 1000px;
   width: 100vw;
@@ -232,12 +252,14 @@ h6 {
   box-shadow: 0px 0px 75px 10px #000;
   /* filter: drop-shadow(0px 5px 10px #000); */
 }
+
 /* ---------------------------------------------------------------------------- */
 .app-layout {
   display: flex;
   justify-content: space-between;
   align-items: space-between;
 }
+
 .app-server-nav {
   display: flex;
   flex-direction: column;
@@ -246,6 +268,7 @@ h6 {
   /* the 5% below sets the width. check flex shorthand */
   flex: 0 0 5%;
 }
+
 .app-window-buttons {
   width: 100%;
   display: flex;
@@ -254,20 +277,25 @@ h6 {
   padding: 0 5px;
   margin-top: 20%;
 }
+
 .dot {
   height: 15px;
   width: 15px;
   border-radius: 50%;
 }
+
 .dot:nth-child(1) {
   background-color: #ff0000;
 }
+
 .dot:nth-child(2) {
   background-color: #ffbb00;
 }
+
 .dot:nth-child(3) {
   background-color: #008000;
 }
+
 .app-servers {
   display: flex;
   flex-direction: column;
@@ -275,6 +303,7 @@ h6 {
   justify-content: space-evenly;
   height: 100%;
 }
+
 .server {
   width: 50px;
   height: 50px;
@@ -285,15 +314,18 @@ h6 {
   transition: all 0.1s ease-out;
   cursor: pointer;
 }
+
 .server:hover {
   box-shadow: 0 0 5px 4px #fcf9ff;
   transform: scale(1.1);
 }
+
 .app-logo {
   margin-bottom: 20%;
   height: 40px;
   width: auto;
 }
+
 /* --------------------------------------------------------------------------- */
 .app-contacts-nav {
   display: flex;
@@ -304,6 +336,7 @@ h6 {
   /* flex grow, flex shrink, flex basis */
   background-color: #161b1f;
 }
+
 #search-box {
   width: 90%;
   height: 40px;
@@ -315,6 +348,7 @@ h6 {
   font-size: 15px;
   color: #fcf9ff;
 }
+
 .new-button {
   margin-top: 20px;
   padding: 6px;
@@ -327,9 +361,11 @@ h6 {
   cursor: pointer;
   font-family: "Raleway", sans-serif;
 }
+
 .new-button:hover {
   background-color: #0f58e0;
 }
+
 .team-info {
   margin-top: 10%;
   width: 100%;
@@ -339,12 +375,14 @@ h6 {
   justify-content: space-around;
   background-color: #0e101a;
 }
+
 .team-dp {
   display: flex;
   justify-content: center;
   align-items: center;
   transition: all 0.1s ease-out;
 }
+
 .team-dp:hover {
   box-shadow: 0 0 5px 4px #00b694;
 }
@@ -369,9 +407,11 @@ h6 {
   cursor: pointer;
   overflow: scroll;
 }
+
 .app-contacts::-webkit-scrollbar {
   display: none;
 }
+
 .app-contacts-list {
   display: flex;
   align-items: center;
@@ -381,16 +421,19 @@ h6 {
   padding: 5%;
   transition: all 0.05s ease-in-out;
 }
+
 .app-contacts-list:hover {
   background-color: #1d222f;
   color: #02f18e;
 }
+
 .app-contacts-list img {
   height: 50px;
   width: 50px;
   border-radius: 50%;
   margin-right: 10%;
 }
+
 .contacts-info p {
   font-size: 10px;
 }
@@ -403,6 +446,7 @@ h6 {
   flex: 0 0 55%;
   padding: 20px;
 }
+
 .app-chat-section-nav {
   width: 100%;
   display: flex;
@@ -411,30 +455,35 @@ h6 {
 
   padding: 20px;
 }
+
 .chat-users {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .chat-users img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   /* margin-right: -5px; */
   transition: all 0.1s ease-in-out;
-  
+
 }
-.chat-users:hover img{
+
+.chat-users:hover img {
   filter: blur(10px);
   transform: scale(0.9);
 
 }
-.chat-users img:hover{
+
+.chat-users img:hover {
   transform: scale(1.1);
   box-shadow: 0 0 10px rgba(2, 241, 142, 0.7);
   filter: blur(0);
   cursor: pointer;
 }
+
 .add-user {
   background-color: #00aee5;
   width: 40px;
@@ -454,9 +503,11 @@ h6 {
   overflow-y: scroll;
   padding: 5%;
 }
-.app-chat-history::-webkit-scrollbar{
+
+.app-chat-history::-webkit-scrollbar {
   display: none;
 }
+
 .chat-history {
   display: flex;
   flex-direction: column;
@@ -464,9 +515,11 @@ h6 {
   align-items: flex-start;
   position: relative;
 }
+
 .chat-history:not(:first-of-type) {
   margin-top: 50px;
 }
+
 .chat-history-dp {
   height: 50px;
   width: 50px;
@@ -487,20 +540,24 @@ h6 {
   border-radius: 5px;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.8);
 }
-.chat-history-text h6{
+
+.chat-history-text h6 {
   margin-bottom: 10px;
   font-weight: 400;
   color: #02f18e;
 }
-.chat-history-text p{
+
+.chat-history-text p {
   font-size: 14px;
   font-weight: 300;
   line-height: 1.3;
   text-align: justify;
 }
-.chat-history-3 img{
+
+.chat-history-3 img {
   height: 55%;
 }
+
 .chat-history-2 .stocks {
   height: 190px;
   width: auto;
@@ -510,7 +567,7 @@ h6 {
 
 /* ----------------------------------------------------------------- */
 /* Text Bar */
-.app-text-bar{
+.app-text-bar {
   width: 100%;
   height: 30px;
   background-color: #2b2e3c;
@@ -521,14 +578,15 @@ h6 {
   padding: 0 5px;
 }
 
-.text-bar-left{
+.text-bar-left {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex: 1;
   font-size: 14px;
 }
-.text-bar-right{
+
+.text-bar-right {
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -536,21 +594,25 @@ h6 {
   flex: 0 0 20%;
   border-left: 2px solid black;
 }
-ion-icon{
+
+ion-icon {
   font-size: 20px;
   color: #fcf9ff;
   transition: all 0.2s ease-out;
   cursor: pointer;
 }
-ion-icon:hover{
-color: #02f18e;
+
+ion-icon:hover {
+  color: #02f18e;
 }
-.send-outline{
+
+.send-outline {
   color: #379e73;
 }
+
 /* -------------------------App Right Nav------------------------------------ */
 
-.app-right-nav{
+.app-right-nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -563,7 +625,7 @@ color: #02f18e;
 
 /* ----------------------------------------------------------------------- */
 /* App Users */
-.app-user{
+.app-user {
   width: 100%;
   background-color: #0e101a;
   display: flex;
@@ -573,42 +635,47 @@ color: #02f18e;
   padding: 5px;
 
 }
-.app-user img{
+
+.app-user img {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
-.app-user-info{
+
+.app-user-info {
   width: auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-.app-user-info p{
+
+.app-user-info p {
   color: #6d6d6d;
   font-size: 14px;
 
 }
 
-.cog-outline{
+.cog-outline {
   color: #6d6d6d;
   flex-grow: 30px;
   transition: all 0.2s ease-in-out;
 }
-.cog-outline:hover{
+
+.cog-outline:hover {
   transform: rotate(90deg);
 }
 
 /* ------------------------------------------------------------------------- */
 /* App Widgets */
 
-.app-widgets{
+.app-widgets {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-top: 10%;
 }
-.widget{
+
+.widget {
   background-color: #0e101a;
   height: 100%;
   width: 100%;
@@ -622,20 +689,25 @@ color: #02f18e;
   transition: all 0.2s ease-out;
   cursor: pointer;
 }
-.widget:hover{
+
+.widget:hover {
   background-color: #1d222f;
   color: #02f18e;
 }
-.widget img{
+
+.widget img {
   height: 35px;
 
 }
-.widget-4 img, .widget-5 img{
+
+.widget-4 img,
+.widget-5 img {
   height: 30px;
 }
+
 /*--------------------------Stas-Bar-Section--------------------------------- */
 
-.stats-section{
+.stats-section {
   height: 120px;
   width: 100%;
   background-color: #1100ff;
@@ -647,7 +719,8 @@ color: #02f18e;
   align-items: center;
   padding: 50px 250px;
 }
-.stats{
+
+.stats {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -655,19 +728,25 @@ color: #02f18e;
   height: auto;
   width: 100%;
 }
-.stats h3{
+
+.stats h3 {
   font-weight: 500;
 }
-.stats p{
+
+.stats p {
   margin-top: 10px;
   font-size: 18px;
   font-weight: 400;
 }
-.stats-1, .stats-2, .stats-3{
+
+.stats-1,
+.stats-2,
+.stats-3 {
   border-right: 4px solid #fcf9ff;
 }
+
 /* -------------------------Why Sectrion---------------------------------- */
-.why-section{
+.why-section {
   height: 900px;
   width: 100%;
   background-color: #0c1014;
@@ -677,17 +756,20 @@ color: #02f18e;
   padding: 60px 50px;
 
 }
-.why-section-left{
+
+.why-section-left {
   height: 100%;
   flex: 0 0 50%;
 
 }
-.l-angle{
+
+.l-angle {
   margin-left: 40px;
   margin-top: 10px;
 
 }
-.key-points{
+
+.key-points {
   margin-left: 120px;
   margin-top: -15px;
   display: flex;
@@ -696,54 +778,61 @@ color: #02f18e;
   justify-content: space-between;
   height: 70%;
 }
-.why-section-left h4{
+
+.why-section-left h4 {
   font-weight: 600;
   margin-bottom: 2%;
 }
-.why-section-left p{
+
+.why-section-left p {
   font-size: 18px;
   color: #a7a7a7;
   line-height: 1.7;
   text-align: justify;
   margin: 5% 0;
 }
-.why-section-right{
+
+.why-section-right {
   height: 100%;
   flex: 0 0 50%;
 }
-.why-section-right img{
-height: 100%;
-width: auto;
+
+.why-section-right img {
+  height: 100%;
+  width: auto;
 }
 
 /* ===========================About Section================================= */
-.about-section{
+.about-section {
   height: 800px;
   background-color: #fcf9ff;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.about-section-content{
+
+.about-section-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   padding: 0 50px;
 }
-.about-section-content img{
-height: 65vh;
-width: 100%;
-margin: 0 50px;
-filter: drop-shadow(0px 0px 100px 10px #000);
+
+.about-section-content img {
+  height: 65vh;
+  width: 100%;
+  margin: 0 50px;
+  filter: drop-shadow(0px 0px 100px 10px #000);
 }
 
-.about-span{
+.about-span {
   color: #2020ff;
   font-weight: 600;
-  
+
 }
-.about-section-content{
+
+.about-section-content {
   color: #000;
   font-size: 30px;
   font-weight: 400;
@@ -751,7 +840,7 @@ filter: drop-shadow(0px 0px 100px 10px #000);
 }
 
 /* ========================Plan Section=================================== */
-.plan-section{
+.plan-section {
   height: 800px;
   background-color: #0c1014;
   display: flex;
@@ -759,21 +848,25 @@ filter: drop-shadow(0px 0px 100px 10px #000);
   justify-content: space-evenly;
   align-items: center;
 }
-.plan-title{
+
+.plan-title {
   text-align: center;
   line-height: 1.5;
 }
-.plan-section p{
+
+.plan-section p {
   font-size: 20px;
   font-weight: 400;
 }
-.card-section{
+
+.card-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 50%;
 }
-.card{
+
+.card {
   height: 450px;
   width: 350px;
   padding: 20px;
@@ -781,25 +874,31 @@ filter: drop-shadow(0px 0px 100px 10px #000);
   box-shadow: 0px 20px 20px 5px #000;
   transition: all 0.2s;
 }
-.card-1, .card-3{
+
+.card-1,
+.card-3 {
   background-color: #fcf9ff;
   color: #0c1014;
 }
-.card-2{
+
+.card-2 {
   background-color: #2020ff;
   color: #fcf9ff;
   z-index: 10;
   margin: 0 -70%;
 }
-.card h3{
-font-weight: 600;
+
+.card h3 {
+  font-weight: 600;
 }
-.card .card-plan{
+
+.card .card-plan {
   text-align: center;
   margin-top: 5%;
   line-height: 2;
 }
-.card .card-plan button{
+
+.card .card-plan button {
   background-color: #e7e7e7;
   height: 40px;
   width: 150px;
@@ -808,15 +907,127 @@ font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
 }
-.card .card-header{
+
+.card .card-header {
   line-height: 1.5;
 }
+
 .card-section:hover .card {
   filter: blur(10px);
   transform: scale(0.9);
 }
-.card-section .card:hover{
+
+.card-section .card:hover {
   z-index: 20;
   filter: blur(0);
   transform: scale(1);
+}
+
+/* ========================Help section============================== */
+
+.support-section {
+  background-color: #0c1014;
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.support-header {
+  margin-top: 50px;
+}
+
+.support-article {
+  margin-top: 2%;
+  background-color: #0c1014;
+  width: 1200px;
+  height: 750px;
+  box-shadow: 0 0 40px 10px #000;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.container {
+  padding: 20px;
+}
+
+input[type=text],
+input[type=submit],
+input[type=email],
+select {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  background-color: #f3e7d9;
+  border: none;
+}
+.check-box{
+  font-size: 16px;
+}
+input[type="check-box"]{
+  margin-top: 20px;
+}
+input[type="submit"]{
+  background-color: #11dd22;
+  color: white;
+  border: none;
+  font-size: 20px;
+  font-weight: 500;
+}
+input[type=submit]:hover{
+  opacity: 0.8;
+}
+.support-article img{
+width: 50%;
+height: 100%;
+}
+
+/* =====================FOOTER =============================================== */
+
+.footer{
+  height: 150px;
+  width: 100%;
+  background-color: #181b26;
+  padding: 0 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+.footer-nav{
+  height: 100%;
+  width: 100%;
+}
+.footer-top{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.footer-logo{
+  height: auto;
+  width: 60%;
+}
+.footer-bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+}
+.footer-links li{
+  margin: 0 20px;
+  font-size: 18px;
+
+}
+.footer-bottom .footer-links{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 0.2s ease-out;
+}
+.footer-links a:hover{
+  color: #00ffe0;
 }
